syntax = "proto3";

package hits;

option go_package = ".;rpc";

service ObserverService {
  rpc Listen (ListenRequest) returns (stream ListenEvent);
}

message ListenRequest {
  uint64 sequence = 1;
}

message ListenEvent {
  uint32 type = 1;
  uint64 sequence = 2;
  uint64 timestamp = 3;
  bytes data = 4;
}
